--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,7 +21,7 @@ environment:
   - PUPPET_GEM_VERSION: 4.2.3
     RUBY_VER: 21-x64
 matrix:
-  fast_finish: true
+  fast_finish: false
 install:
 - SET PATH=C:\Ruby%RUBY_VER%\bin;%PATH%
 - bundle install --jobs 4 --retry 2 --without system_tests
